# ECF5

./: README.md  cliff.toml  sujet.md
.github/workflows/: ci.yml  release.yml
churnguard/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
churnguard/.github/workflows/: ci.yml
churnguard/api/: main.py
churnguard/churnguard/: .pre-commit-config.yaml  data.py  evaluate.py  train.py
churnguard/tests/: test_data.py  test_train.py
mlops_churnguard/: .~lock.Sujet_ChurnGuard_MLOps.docx#  Sujet_ChurnGuard_MLOps.docx
