[tool.poetry]
name = "churnguard"
version = "0.1.0"
description = "MLOps pipeline for churn prediction"
authors = ["Myriam Kessali"]
readme = "README.md"
packages = [{ include = "churnguard" }]

[tool.poetry.dependencies]
python = "^3.11"

# Data & ML
pandas = "^2.2"
scikit-learn = "^1.4"
numpy = "^1.26"

# MLflow
mlflow = ">=3.8,<4.0"

# API
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.30" }

# Validation
pydantic = "^2.7"

# Utils
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]

# Tests
pytest = "^8.2"
pytest-cov = "^5.0"

# Lint & format
ruff = "^0.4"

# Typing
mypy = "^1.10"
types-requests = "^2.32"

# Pre-commit
pre-commit = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -------------------------
# CONFIGURATION OUTILS
# -------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["churnguard"]

[tool.pytest.ini_options]
addopts = "--cov=churnguard --cov-report=term-missing"
testpaths = ["tests"]